<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ETU Takvim</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Hızlı Arama</item>
        <item>Dersler</item>
        <item>Boş Derslikler</item>
        <item>Bilgileri Güncelle</item>
    </string-array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="quickSearch">Hızlı Arama</string>
    <string name="student">Öğrenci</string>
    <string name="classroom">Derslik</string>
    <string name="department">Bölüm</string>
    <string name="course">Ders</string>
    <string name="instructor">Öğretim Üyesi</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="title_section1">Pazartesi</string>
    <string name="title_section2">Salı</string>
    <string name="title_section3">Çarşamba</string>
    <string name="title_section4">Perşembe</string>
    <string name="title_section5">Cuma</string>
    <string name="title_section6">Cumartesi</string>
    <string name="courseSearch">Ders Arama</string>
    <string name="course_courseProgram">Ders programını getir</string>
    <string name="course_courseTakers">Dersi Alanların Listesini Getir</string>
    <string name="course_courseTakerPrograms">Dersi Alanların Programlarını Getir</string>

</resources>
