<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/checkBoxLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp" >

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:button="@drawable/customdrawablecheckbox"
            android:text="@string/student" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:button="@drawable/customdrawablecheckbox"
            android:text="@string/course" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkBoxLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBoxLayout1"
        android:gravity="center_horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp" >

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:button="@drawable/customdrawablecheckbox"
            android:text="@string/department" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:button="@drawable/customdrawablecheckbox"
            android:text="@string/classroom" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkBoxLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBoxLayout2"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp" >

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:button="@drawable/customdrawablecheckbox"
            android:text="@string/instructor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/autoCompleteLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/checkBoxLayout3"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <AutoCompleteTextView
            android:id="@+id/quickSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.86"
            android:background="@drawable/rounded_corner"
            android:dropDownHeight="100dp"
            android:ems="10"
            android:hint="@string/quickSearch"
            android:popupBackground="@drawable/autocompletete_drawer" >

            <requestFocus />
        </AutoCompleteTextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/autoCompleteLayout"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:layout_marginTop="20dp" >
        </ListView>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:text="Button" />

    </LinearLayout>

</RelativeLayout>